<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:checked="true"
            android:icon="@drawable/edit"
            android:title="@string/slider_edit_profile"
            />
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/edit"
            android:title="@string/slider_buy_credit" />
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/sallary_icon"
            android:title="@string/slider_my_cvs" />

        <item
            android:id="@+id/nav_fourth_fragment"
            android:icon="@drawable/doc_icon"
            android:title="@string/slider_my_address_book" />

        <item
            android:id="@+id/nav_fifth_fragment"
            android:icon="@drawable/shortlist_icon"
            android:title="@string/slider_shortlisted_cvs" />

        <item
            android:id="@+id/nav_message_fragment"
            android:icon="@drawable/message_icon"
            android:title="@string/slider_message" />

        <item
            android:id="@+id/nav_seventh_fragment"
            android:icon="@drawable/gallery_icon"
            android:title="@string/slider_video_gallery" />

        <item
            android:id="@+id/nav_eigth_fragment"
            android:icon="@drawable/reviews_icon"
            android:title="@string/slider_reviews" />

        <item
            android:id="@+id/nav_ninth_fragment"
            android:icon="@drawable/search_icon"
            android:title="@string/slider_saved_search" />

        <item
            android:id="@+id/nav_logout_user"
            android:icon="@drawable/sign_up"
            android:title="@string/slider_logout" />
    </group>
</menu>