<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:akshay="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:fillViewport="true"
        android:paddingLeft="20dip"
        android:paddingRight="20dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:adjustViewBounds="true"
                android:src="@drawable/cvido_icon" />

            <com.akslibrary.view.TypefacedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/str_forgot_your_password"
                android:textColor="@color/color_title_bg"
                android:textSize="18dip"
                android:textStyle="bold"
                akshay:typeface="@string/font_helvetica" />

            <com.akslibrary.view.TypefacedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/str_reset_password_description"
                android:textColor="@android:color/darker_gray"
                android:textSize="15dip"
                akshay:typeface="@string/font_helvetica" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="30dip"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dip"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:background="@color/color_title_bg"
                    android:padding="10dip"
                    android:src="@drawable/message_icon" />

                <com.akslibrary.view.TypefacedEditText
                    android:id="@+id/txt_signup_username"
                    style="@style/style_textbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/str_enter_your_email"
                    android:inputType="text"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.akslibrary.view.TypefacedTextView
                    android:id="@+id/btnResetPassword"
                    style="@style/style_button_blue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="15dip"
                    android:layout_weight=".5"
                    android:background="@android:color/black"
                    android:clickable="true"
                    android:onClick="onClickHandler"
                    android:text="@string/str_submit"
                    akshay:typeface="@string/font_raleway" />

                <com.akslibrary.view.TypefacedTextView
                    android:id="@+id/btnCancel"
                    style="@style/style_button_blue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="15dip"
                    android:layout_weight=".5"
                    android:background="@color/button_grey"
                    android:clickable="true"
                    android:onClick="onClickHandler"
                    android:text="@string/str_cancel"
                    akshay:typeface="@string/font_raleway" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:drawableLeft="@drawable/sign_in"
            android:drawablePadding="5dip"
            android:gravity="center"
            android:minHeight="30dip"
            android:padding="10dip"
            android:text="@string/str_sign_in"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textVie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:drawableLeft="@drawable/help_icon"
            android:drawablePadding="5dip"
            android:gravity="center"
            android:minHeight="30dip"
            android:padding="10dip"
            android:text="Help?"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/darker_gray" />
    </RelativeLayout>

</LinearLayout>