<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:akshay="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@color/color_title_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="10dip"
            android:src="@drawable/back_arrow" />

        <com.akslibrary.view.TypefacedTextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_login"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            akshay:typeface="@string/font_raleway" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:paddingLeft="20dip"
        android:paddingRight="20dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="30dip"
                android:adjustViewBounds="true"
                android:src="@drawable/cvido_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dip"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:background="@color/color_title_bg"
                    android:padding="10dip"
                    android:src="@drawable/message_icon" />

                <com.akslibrary.view.TypefacedEditText
                    android:id="@+id/txt_signup_username"
                    style="@style/style_textbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/str_enter_email"
                    android:inputType="text"
                    android:singleLine="true"
                    akshay:typeface="@string/font_raleway" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dip"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:background="@color/color_title_bg"
                    android:padding="10dip"
                    android:src="@drawable/password_icon" />

                <com.akslibrary.view.TypefacedEditText
                    android:id="@+id/txt_signup_password"
                    style="@style/style_textbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:hint="@string/str_password"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dip"
                android:layout_marginTop="10dip">

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="30dip"
                    android:text="@string/str_remember_me"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12dip" />

                <TextView
                    android:id="@+id/lblForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:minHeight="30dip"
                    android:onClick="onClickHandler"
                    android:text="@string/str_forgot_password"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12dip" />
            </RelativeLayout>

            <com.akslibrary.view.TypefacedTextView
                android:id="@+id/btnLoginUser"
                style="@style/style_button_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@android:color/black"
                android:clickable="true"
                android:onClick="onClickHandler"
                android:text="@string/str_sign_in"
                akshay:typeface="@string/font_raleway" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dip"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSignupFb"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dip"
                    android:layout_marginRight="30dip"
                    android:background="@drawable/facebook_icon" />

                <Button
                    android:id="@+id/btnSignupTwitter"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/skype_icon"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnSignupLinkedIn"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dip"
                    android:layout_marginRight="30dip"
                    android:background="@drawable/linkedin_icon" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:drawableLeft="@drawable/sign_up"
            android:drawablePadding="5dip"
            android:gravity="center"
            android:minHeight="30dip"
            android:padding="10dip"
            android:text="@string/str_sign_up"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textVie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:drawableLeft="@drawable/help_icon"
            android:drawablePadding="5dip"
            android:gravity="center"
            android:minHeight="30dip"
            android:padding="10dip"
            android:text="Help?"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/darker_gray" />
    </RelativeLayout>

</LinearLayout>